# media_metadata

./: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: media_metadata.podspec
ios/media_metadata/: Package.swift
ios/media_metadata/Sources/media_metadata/: MediaMetadataPlugin.swift
lib/: media_metadata.dart  media_metadata_method_channel.dart  media_metadata_platform_interface.dart
lib/src/: media_metadata_method_channel.dart  media_metadata_platform_interface.dart  metadata.dart
linux/: CMakeLists.txt  media_metadata_plugin.cc  media_metadata_plugin_private.h
linux/include/media_metadata/: media_metadata_plugin.h
linux/test/: media_metadata_plugin_test.cc
macos/: media_metadata.podspec
macos/media_metadata/: Package.swift
macos/media_metadata/Sources/media_metadata/: MediaMetadataPlugin.swift
windows/: CMakeLists.txt  media_metadata_plugin.cpp  media_metadata_plugin.h  media_metadata_plugin_c_api.cpp
windows/include/media_metadata/: media_metadata_plugin.h  media_metadata_plugin_c_api.h
windows/test/: media_metadata_plugin_test.cpp
(+4 files in other folders)
