cmake_minimum_required(VERSION 3.10)
set(PROJECT_NAME "media_metadata")
project(${PROJECT_NAME} LANGUAGES CXX)

set(PLUGIN_NAME "media_metadata_plugin")

find_package(PkgConfig REQUIRED)
pkg_check_modules(TAGLIB taglib)

add_library(${PLUGIN_NAME} SHARED
  "media_metadata_plugin.cc"
)

apply_standard_settings(${PLUGIN_NAME})
set_target_properties(${PLUGIN_NAME} PROPERTIES CXX_VISIBILITY_PRESET hidden)
target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
target_include_directories(${PLUGIN_NAME} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(${PLUGIN_NAME} PRIVATE flutter)

if(TAGLIB_FOUND)
  target_include_directories(${PLUGIN_NAME} PRIVATE ${TAGLIB_INCLUDE_DIRS})
  target_link_libraries(${PLUGIN_NAME} PRIVATE ${TAGLIB_LIBRARIES})
  target_compile_definitions(${PLUGIN_NAME} PRIVATE HAS_TAGLIB)
endif()

set(media_metadata_bundled_libraries "" PARENT_SCOPE)
